--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -136,7 +136,36 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00007">https://arxiv.org/abs/2209.00007</a></span> Many-Body Superconductivity in Topological Flat Bands ***** (B. Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00026">https://arxiv.org/abs/2209.00026</a></span> Topological Field Theories of Three-Dimensional Rotation Symmetric Insulators: Coupling Curvature and Electromagnetism **** (Taylor L. Hughes)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00037">https://arxiv.org/abs/2209.00037</a></span> Multiversality and unnecessary criticality in one dimension (S.A. Parameswaran)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00022">https://arxiv.org/abs/2209.00022</a></span> Nodal higher-order topological superconductivity from a C4-symmetric Dirac semimetal *** (Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00022">https://arxiv.org/abs/2209.00022</a></span> Nodal higher-order topological superconductivity from a C4-symmetric Dirac semimetal *** (Yuxuan Wang)</p><br>
+<p class="p1">20220905</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00664">https://arxiv.org/abs/2209.00664</a></span> Triangular lattice Hubbard model physics at intermediate temperatures **** (Kyungmin Lee, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.00720">https://arxiv.org/abs/2209.00720</a></span> Nonlinear spectroscopy of bound states in perturbed Ising spin chains **** (GiBaik Sim, Johannes Knolle, Frank Pollmann)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2209.01122">https://arxiv.org/abs/2209.01122</a><span class="s2"> Nambu and the Ising Model</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.02408">https://arxiv.org/abs/2207.02408</a></span> Twists and turns of superconductivity from a repulsive dynamical interaction **** (Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.06182">https://arxiv.org/abs/2110.06182</a></span> Topological semimetals without quasiparticles **** (Haoyu Hu, Stefan Kirchner, Silke Paschen, Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.09564">https://arxiv.org/abs/2008.09564</a></span> Wilsonian Renormalization Group for a Multitrace Matrix Model</p>
+<p class="p3"><br></p>
+<p class="p1">20220907</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02255">https://arxiv.org/abs/2209.02255</a></span> Higher-order topological insulator with glide reflection symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02262">https://arxiv.org/abs/2209.02262</a></span> Higher-order Topological Hyperbolic Lattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.01485">https://arxiv.org/abs/2209.01485</a></span> Maxwell theory of fractons ***<br>
+<a href="https://arxiv.org/abs/2209.00670"><span class="s1">https://arxiv.org/abs/2209.00670</span></a> Nonlinear sigma model description of deconfined quantum criticality in arbitrary dimensions ***** (Da-Chuan Lu)</p>
+<p class="p3"><br></p>
+<p class="p1">20220908</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02723">https://arxiv.org/abs/2209.02723</a></span> Average Symmetry-Protected Topological Phases **** (Ruochen Ma, Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02837">https://arxiv.org/abs/2209.02837</a></span> CFTs with U (m) × U (n) Global Symmetry in 3D and the Chiral Phase Transition of QCD</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02733">https://arxiv.org/abs/2209.02733</a></span> A theory of criticality for quantum ferroelectric metals *** (Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02734">https://arxiv.org/abs/2209.02734</a></span> Gross-Neveu-Heisenberg criticality from 2 + <span class="s3">𝝐</span> expansion (Tobias Meng, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03344">https://arxiv.org/abs/2209.03344</a></span> Dynamical Signatures of Symmetry Broken and Liquid Phases in an S = 1/2 Heisenberg Antiferromagnet on the Triangular Lattice (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.05973">https://arxiv.org/abs/2208.05973</a></span> Universal Non-Invertible Symmetries</p>
+<p class="p2"><a href="https://arxiv.org/abs/2208.05417">https://arxiv.org/abs/2208.05417</a><span class="s2"> Quantum Glasses</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.02820">https://arxiv.org/abs/2209.02820</a></span> Denominator Regularization in Quantum Field Theory</p>
+<p class="p3"><br></p>
+<p class="p1">20220909</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03368">https://arxiv.org/abs/2209.03368</a></span> Rydberg dressed spin-1/2 Fermi gases in one dimension *** (Junhyun Lee, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03743">https://arxiv.org/abs/2209.03743</a></span> Exact analysis of the Liouvillian gap and dynamics in the dissipative SU(N) Fermi-Hubbard model *** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03569">https://arxiv.org/abs/2209.03569</a></span> Multiparticle quantum walk in the strongly interacting SU(3) Su-Schrieffer-Heeger-Hubbard topological model *** (Gergely Zar ́and)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03828">https://arxiv.org/abs/2209.03828</a></span> ’t Hooft anomalies for staggered fermions ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
