--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -165,7 +165,44 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03368">https://arxiv.org/abs/2209.03368</a></span> Rydberg dressed spin-1/2 Fermi gases in one dimension *** (Junhyun Lee, J. H. Pixley)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03743">https://arxiv.org/abs/2209.03743</a></span> Exact analysis of the Liouvillian gap and dynamics in the dissipative SU(N) Fermi-Hubbard model *** (Hosho Katsura)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03569">https://arxiv.org/abs/2209.03569</a></span> Multiparticle quantum walk in the strongly interacting SU(3) Su-Schrieffer-Heeger-Hubbard topological model *** (Gergely Zar ́and)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03828">https://arxiv.org/abs/2209.03828</a></span> ’t Hooft anomalies for staggered fermions ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03828">https://arxiv.org/abs/2209.03828</a></span> ’t Hooft anomalies for staggered fermions ****</p><br>
+<p class="p1">20220912</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03964">https://arxiv.org/abs/2209.03964</a></span> The Shortest Route to Non-Abelian Topological Order on a Quantum Processor ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.04336">https://arxiv.org/abs/2209.04336</a></span> Topological states in strongly correlated systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.03966">https://arxiv.org/abs/2209.03966</a></span> Ergodicity breaking provably robust to arbitrary perturbations (Rahul M. Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09906">https://arxiv.org/abs/2111.09906</a></span> Solvable model for a charge-4e superconductor ***** (Yuxuan Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20220913</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.04519">https://arxiv.org/abs/2209.04519</a></span> When Does A Three-Dimensional Chern-Simons-Witten Theory Have A Time Reversal Symmetry? ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.04472">https://arxiv.org/abs/2209.04472</a></span> Vortex Fermi Liquid and Strongly Correlated Bad Metal ***** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05430">https://arxiv.org/abs/2209.05430</a></span> Pseudogap metal and magnetization plateau from doping moir ́e Mott insulator **** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05132">https://arxiv.org/abs/2209.05132</a></span> GGI Lectures on Entropy, Operator Algebras and Black Holes</p>
+<p class="p2"><br></p>
+<p class="p1">20220914</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05491">https://arxiv.org/abs/2209.05491</a></span> Collective density fluctuations of strange metals with critical Fermi surfaces ***** (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05510">https://arxiv.org/abs/2209.05510</a></span> Photo-induced Superconductivity = Discrete Time Crystal? **** (Norman Y. Yao, Michael P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05702">https://arxiv.org/abs/2209.05702</a></span> Theory of transverse magnetization in spin-orbit coupled antiferromagnets *** (Taekoo Oh, Sungjoon Park, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06157">https://arxiv.org/abs/2209.06157</a></span> The Symmetry Principle in Condensed Matter Physics (I)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05511">https://arxiv.org/abs/2209.05511</a></span> Fermions in Boundary Conformal Field Theory : Crossing Symmetry and ǫ-Expansion</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05498">https://arxiv.org/abs/2209.05498</a></span> The one-dimensional Holstein model revisited *** (Ilya Esterlis, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06202">https://arxiv.org/abs/2209.06202</a></span> A hierarchy of topological order from finite-depth unitaries, measurement and feedforward ***** (Ashvin Vishwanath)</p>
+<p class="p2"><br></p>
+<p class="p1">20220915</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06817">https://arxiv.org/abs/2209.06817</a></span> Diamagnetic response and phase stiffness for interacting isolated narrow bands **** (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06697">https://arxiv.org/abs/2209.06697</a></span> Non-Abelian nonsymmorphic chiral symmetries **** (Hoi Chun Po, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.06543">https://arxiv.org/abs/2209.06543</a></span> Tunable phase transition in a dissipative two-spin system: A renormalization group study ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11681">https://arxiv.org/abs/2201.11681</a></span> Resonant thermal Hall effect of phonons coupled to dynamical defects ***** (Haoyu Guo, Darshan G. Joshi, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11681">https://arxiv.org/abs/2201.11681</a></span> Intertwining orbital current order and superconductivity in Kagome metal *** (Hyeok-Jun Yang, Hee Seung Kim, Min Yong Jeong, Yong Baek Kim, Myung Joon Han, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08847">https://arxiv.org/abs/2203.08847</a></span> Topological Disorder Parameter *** (Zi Yang Meng, Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06574">https://arxiv.org/abs/2204.06574</a></span> Moir ́e Gravity and Cosmology **** (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12482">https://arxiv.org/abs/2204.12482</a></span> Fractional Vortices, Z2 Gauge Theory, and the Confinement-Deconfinement Transition **** (Dung-Hai Lee)<br>
+</p>
+<p class="p1">20220916</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07468">https://arxiv.org/abs/2209.07468</a></span> Phenomenological formula for Quantum Hall resistivity based on the Riemann zeta function *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07287">https://arxiv.org/abs/2209.07287</a></span> Role of the Berry curvature on BCS-type superconductivity in two-dimensional materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07103">https://arxiv.org/abs/2209.07103</a></span> Fermion disorder operator: the hedgehog and the fox of quantum many-body entanglement *** ( Fakher F. Assaad, Meng Cheng, Kai Sun, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05037">https://arxiv.org/abs/2109.05037</a></span> Sachdev-Ye-Kitaev Models and Beyond: A Window into Non-Fermi Liquids ***** (Debanjan Chowdhury, Antoine Georges, Olivier Parcollet, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09856">https://arxiv.org/abs/2201.09856</a></span> Persistent Homology of Z2 Gauge Theories (Roger G. Melko)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
