--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -202,7 +202,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07287">https://arxiv.org/abs/2209.07287</a></span> Role of the Berry curvature on BCS-type superconductivity in two-dimensional materials</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07103">https://arxiv.org/abs/2209.07103</a></span> Fermion disorder operator: the hedgehog and the fox of quantum many-body entanglement *** ( Fakher F. Assaad, Meng Cheng, Kai Sun, Zi Yang Meng)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.05037">https://arxiv.org/abs/2109.05037</a></span> Sachdev-Ye-Kitaev Models and Beyond: A Window into Non-Fermi Liquids ***** (Debanjan Chowdhury, Antoine Georges, Olivier Parcollet, Subir Sachdev)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09856">https://arxiv.org/abs/2201.09856</a></span> Persistent Homology of Z2 Gauge Theories (Roger G. Melko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09856">https://arxiv.org/abs/2201.09856</a></span> Persistent Homology of Z2 Gauge Theories (Roger G. Melko)</p><br>
+<p class="p1">20220919</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07824">https://arxiv.org/abs/2209.07824</a></span> Hybrid Symmetry Breaking in Classical Spin Models With Subsystem Symmetries ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.06911">https://arxiv.org/abs/2112.06911</a></span> Projected Topological Branes *** (Vladimir Juriˇci ́c, Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.07743">https://arxiv.org/abs/2209.07743</a></span> Introduction to topological defects: from liquid crystals to particle physics ****</p>
+<p class="p2"><br></p>
+<p class="p1">20220920</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.08108">https://arxiv.org/abs/2209.08108</a></span> Anomalous hydrodynamics with triangular point group in 2 + 1 dimensions *** (Marvin Qi, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.08835">https://arxiv.org/abs/2209.08835</a></span> Defect Localized Entropy: Renormalization Group and Holography ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.09054">https://arxiv.org/abs/2209.09054</a></span> Lacing topological orders in two dimensions: exactly solvable models for Kitaev’s sixteen-fold way ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.08208">https://arxiv.org/abs/2209.08208</a></span> Anisotropic resistivity tensor from disk geometry magneto-transport *** (Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.09235">https://arxiv.org/abs/2209.09235</a></span> N3LO Quadratic-in-Spin Interactions for Generic Compact Binaries (Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12828">https://arxiv.org/abs/2112.12828</a></span> Gravity and the Crossed Product (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20220921</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.09654">https://arxiv.org/abs/2209.09654</a></span> An optimal superconducting hybrid machine (Kun Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.09254">https://arxiv.org/abs/2209.09254</a></span> Pair density wave order from electron repulsion ***** (Yi-Ming Wu, Aavishkar A. Patel, S. Raghu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220922</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10396">https://arxiv.org/abs/2209.10396</a></span> Coupled topological flat and wide bands: Quasiparticle formation and destruction ***** (Haoyu Hu, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10030">https://arxiv.org/abs/2209.10030</a></span> 2+1d Compact Lifshitz Theory, Tensor Gauge Theory, and Fractons ***** (Pranay Gorantla, Ho Tat Lam, Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.04472">https://arxiv.org/abs/2209.04472</a></span> Vortex Fermi Liquid and Strongly Correlated Quantum Bad Metal **** (Nayan Myerson-Jain, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220923</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10728">https://arxiv.org/abs/2209.10728</a></span> Fully packed quantum loop model on the square lattice: phase diagram and application for Rydberg atoms (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10429">https://arxiv.org/abs/2209.10429</a></span> Multipolar ordering from dynamical mean field theory with application to CeB6 **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.01241">https://arxiv.org/abs/2103.01241</a></span> Riemannian geometry of resonant optical responses ***** (Junyeong Ahn, Guang-Yu Guo, Naoto Nagaosa, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10574">https://arxiv.org/abs/2209.10574</a></span> A Gauge Theory for Shallow Water (David Tong)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
