--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -27,93 +27,11 @@
 <meta name="theme-color" content="#ffffff">
 <!-- --> 
 
+<link rel="stylesheet" href="../cssstyle.css">
+<link rel="stylesheet" href="../css_arxiv.css">
+<script src="../scripts.js"></script>
 
-<style type="text/css">
- @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzJS3E-kSBmtLoNJPDtbj2Pk.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxjdGNerWpg2Hn6A-BxWgZ_I.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3SZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBiwlidHJgAgmTjOEEzwu1L8.ttf) format('truetype');
-}
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
-
-<!--
-    body {
-        margin: 0;
-        padding: 0;
--webkit-text-size-adjust:none;
-    }
-    //-->
-</style>
-
-<style type="text/css">
-
-a:link {text-decoration: none; color: dimgray;}
-a:visited {text-decoration: none; color: dimgray; }
-a:active {text-decoration: none;  color: dimgray;}
-a:hover {text-decoration: underline; color: darkgray;}
-</style>
-
-<style type="text/css">
-#title {font-weight:bold; font-size:300%; font-family:Open Sans;  text-align: center;}
-#titlecontent { font-family:Open Sans;  text-align: center; font-weight: 500;}
-
-@media screen and (max-width: 1000px){
-#center {font-size:10pt; width:90%; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-@media screen and (min-width: 1000px) {
-#center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-#last {width:100%; background-color:FFFFFF; text-align:center;}
-
-.cvitemize { font-size:110%; font-weight: bold;}
-.cvitem { font-weight: bold; font-family:Open Sans;}
-.cvperiod { float:right; font-family:Open Sans; font-style:italic;}
-.cvitemcontent { }
- </style>
- 
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61068885-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
- <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
-<style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; min-height: 14.0px}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; color: #dca10d}
-    span.s1 {color: #000000}
-    span.s2 {color: #000000}
-    span.s3 {color: #000000}
-    span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
-    span.s5 {color: #000000}
-  </style>
 <body style="background-color:#EFEFEF">
 
 <div id="center">
@@ -230,6 +148,37 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10429">https://arxiv.org/abs/2209.10429</a></span> Multipolar ordering from dynamical mean field theory with application to CeB6 **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.01241">https://arxiv.org/abs/2103.01241</a></span> Riemannian geometry of resonant optical responses ***** (Junyeong Ahn, Guang-Yu Guo, Naoto Nagaosa, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10574">https://arxiv.org/abs/2209.10574</a></span> A Gauge Theory for Shallow Water (David Tong)</p>
+<br>
+<p class="p1">20220926</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.11556">https://arxiv.org/abs/2209.11556</a></span> Asymmetry effects on the phases of RKKY-coupled two-impurity Kondo systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.11747">https://arxiv.org/abs/2209.11747</a></span> Floquet transmission in Weyl/multi-Weyl and nodal-line semimetals through a time-periodic potential well (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.11599">https://arxiv.org/abs/2209.11599</a></span> Quantum critical dynamics of electric dipoles in two-dimensions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.11243">https://arxiv.org/abs/2209.11243</a></span> Symmetry fractionalization in the gauge mean-field theory of quantum spin ice **** (F ́elix Desrochers, Li Ern Chern, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.11242">https://arxiv.org/abs/2209.11242</a></span> Prethermalization and the local robustness of gapped systems (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.08841">https://arxiv.org/abs/2207.08841</a></span> Large N theory of critical Fermi surfaces II: conductivity ***** (Haoyu Guo, Aavishkar A. Patel, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20220927</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02727">https://arxiv.org/abs/2206.02727</a></span> Boson-fermion duality with subsystem symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.12428">https://arxiv.org/abs/2209.12428</a></span> Enhancing Detection of Topological Order by Local Error Correction ***** (Soonwon Choi, Mikhail D. Lukin)</p>
+<p class="p2"><br></p>
+<p class="p1">20220928</p>
+<p class="p3"><a href="https://arxiv.org/abs/2209.13450">https://arxiv.org/abs/2209.13450</a><span class="s2"> Duality viewpoint of criticality</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.12917">https://arxiv.org/abs/2209.12917</a></span> Detecting Subsystem Symmetry Protected Topological Order Through Strange Correlators (Zi Yang Meng)</p>
+<p class="p2"><br></p>
+<p class="p1">20220929</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.13838">https://arxiv.org/abs/2209.13838</a></span> Properties of the non-Hermitian SSH model : role of PT -symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.13629">https://arxiv.org/abs/2209.13629</a></span> Spin Berry curvature of the Haldane model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.13905">https://arxiv.org/abs/2209.13905</a></span> Charge 4<i>e </i>superconductor: a wavefunction approach ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.13745">https://arxiv.org/abs/2209.13745</a></span> Frustrated superconductivity and “charge-6e” ordering ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.07465">https://arxiv.org/abs/2205.07465</a></span> Multiple superconducting phases in heavy-fermion metals ***** (Qimiao Si)</p>
+<p class="p2"><br></p>
+<p class="p1">20220930</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14333">https://arxiv.org/abs/2209.14333</a></span> Constructing Non-Abelian Quantum Spin Liquids Using Combinatorial Gauge Symmetry (Claudio Chamon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14469">https://arxiv.org/abs/2209.14469</a></span> Weak-Coupling Theory of Pair Density-Wave Instabilities in Transition Metal Dichalcogenides ***** (F. J. Burnell, Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14322">https://arxiv.org/abs/2209.14322</a></span> Phase diagram of twisted bilayer graphene at filling factor ν = −3 (Jian Kang, B. Andrei Bernevig, Oskar Vafek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14302">https://arxiv.org/abs/2209.14302</a></span> Extracting Wilson loop operators and fractional statistics from a single bulk ground state (Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14310">https://arxiv.org/abs/2209.14310</a></span> On the “naturalness” of d + ig superconductivity in Sr2RuO4 **** (Erez Berg, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.07173">https://arxiv.org/abs/2205.07173</a></span> Dirac fermions with plaquette interactions. II. <span class="s3">𝑆𝑈</span>(4) phase diagram with Gross-Neveu criticality and quantum spin liquid (Zi Yang Meng, Yang Qi)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
