--- a/index.html
+++ b/index.html
@@ -27,91 +27,9 @@
 <meta name="theme-color" content="#ffffff">
 <!-- --> 
 
+<link rel="stylesheet" href="cssstyle.css">
+<script src="scripts.js"></script>
 
-<style type="text/css">
-	p.emphtext{
-  font-size: 15px;
-}
- @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzJS3E-kSBmtLoNJPDtbj2Pk.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxjdGNerWpg2Hn6A-BxWgZ_I.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3SZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBiwlidHJgAgmTjOEEzwu1L8.ttf) format('truetype');
-}
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
-
-<!--
-    body {
-        margin: 0;
-        padding: 0;
--webkit-text-size-adjust:none;
-    }
-    //-->
-	iframe {
-	    margin: 0px;
-	    padding: 0px;
-	    background: white;
-	    border: none;
-	}
-</style>
-
-<style type="text/css">
-
-a:link {text-decoration: none; color: dimgray;}
-a:visited {text-decoration: none; color: dimgray; }
-a:active {text-decoration: none;  color: dimgray;}
-a:hover {text-decoration: underline; color: darkgray;}
-</style>
-
-<style type="text/css">
-#title {font-weight:bold; font-size:300%; font-family:Open Sans;  text-align: center;}
-#titlecontent { font-family:Open Sans;  text-align: center; font-weight: 500;}
-
-@media screen and (max-width: 1000px){
-#center {font-size:10pt; width:90%; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-@media screen and (min-width: 1000px) {
-#center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-#last {width:100%; background-color:FFFFFF; text-align:center;}
-
-.cvitemize { font-size:110%; font-weight: bold;}
-.cvitem { font-weight: bold; font-family:Open Sans;}
-.cvperiod { float:right; font-family:Open Sans; font-style:italic;}
-.cvitemcontent { }
- </style>
- 
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61068885-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body style="background-color:#EFEFEF">
@@ -561,7 +479,7 @@ KIAS workshop on Topology and Correlation (Poster) </span>
 		<div class="cvitemcontent"> <a href="http://home.kias.re.kr/MKG/h/QMS2016/?pageNo=1812">"Topological Phase Transitions in Line-nodal Superconductors"</a> </div>	
 		</li></ul></ul>
 
-		<div class="cvitemize"> Today's arXiv </div> <div align="center"><div align="left" style="padding: 0;margin:0; height: auto; position: relative;display:inline-block;">2015: <span style="float:right"><a href="arxiv/2015_07_arxiv.html">2015/07</a> / <a href="arxiv/2015_08_arxiv.html">2015/08</a> / <a href="arxiv/2015_09_arxiv.html">2015/09</a> / <a href="arxiv/2015_10_arxiv.html">2015/10</a> / <a href="arxiv/2015_11_arxiv.html">2015/11</a> / <a href="arxiv/2015_12_arxiv.html">2015/12</a> &#8239</span><br>2016: <a href="arxiv/2016_01_arxiv.html">2016/01</a> / <a href="arxiv/2016_02_arxiv.html">2016/02</a> / <a href="arxiv/2016_03_arxiv.html">2016/03</a> / <a href="arxiv/2016_04_arxiv.html">2016/04</a> / <a href="arxiv/2016_05_arxiv.html">2016/05</a> / <a href="arxiv/2016_06_arxiv.html">2016/06</a> / <a href="arxiv/2016_07_arxiv.html">2016/07</a> / <a href="arxiv/2016_08_arxiv.html">2016/08</a> / <a href="arxiv/2016_09_arxiv.html">2016/09</a> / <a href="arxiv/2016_10_arxiv.html">2016/10</a> / <a href="arxiv/2016_11_arxiv.html">2016/11</a> / <a href="arxiv/2018_12_arxiv.html">2016/12</a> <br>2017: <a href="arxiv/2017_01_arxiv.html">2017/01</a> / <a href="arxiv/2017_02_arxiv.html">2017/02</a> / <a href="arxiv/2017_03_arxiv.html">2017/03</a> / <a href="arxiv/2017_04_arxiv.html">2017/04</a> / <a href="arxiv/2017_05_arxiv.html">2017/05</a> / <a href="arxiv/2017_06_arxiv.html">2017/06</a> / <a href="arxiv/2017_07_arxiv.html">2017/07</a> / <a href="arxiv/2017_08_arxiv.html">2017/08</a> / <a href="arxiv/2017_09_arxiv.html">2017/09</a> / <a href="arxiv/2017_10_arxiv.html">2017/10</a> / <a href="arxiv/2017_11_arxiv.html">2017/11</a> / <a href="arxiv/2018_12_arxiv.html">2017/12</a> <br>2018: <a href="arxiv/2018_01_arxiv.html">2018/01</a> / <a href="arxiv/2018_02_arxiv.html">2018/02</a> / <a href="arxiv/2018_03_arxiv.html">2018/03</a> / <a href="arxiv/2018_04_arxiv.html">2018/04</a> / <a href="arxiv/2018_05_arxiv.html">2018/05</a> / <a href="arxiv/2018_06_arxiv.html">2018/06</a> / <a href="arxiv/2018_07_arxiv.html">2018/07</a> / <a href="arxiv/2018_08_arxiv.html">2018/08</a> / <a href="arxiv/2018_09_arxiv.html">2018/09</a> / <a href="arxiv/2018_10_arxiv.html">2018/10</a> / <a href="arxiv/2018_11_arxiv.html">2018/11</a> / <a href="arxiv/2018_12_arxiv.html">2018/12</a> <br>2019: <a href="arxiv/2019_01_arxiv.html">2019/01</a> / <a href="arxiv/2019_02_arxiv.html">2019/02</a> / <a href="arxiv/2019_03_arxiv.html">2019/03</a> / <a href="arxiv/2019_04_arxiv.html">2019/04</a> / <a href="arxiv/2019_05_arxiv.html">2019/05</a> / <a href="arxiv/2019_06_arxiv.html">2019/06</a> / <a href="arxiv/2019_07_arxiv.html">2019/07</a> / <a href="arxiv/2019_08_arxiv.html">2019/08</a> / <a href="arxiv/2019_09_arxiv.html">2019/09</a> / <a href="arxiv/2019_10_arxiv.html">2019/10</a> / <a href="arxiv/2019_11_arxiv.html">2019/11</a> / <a href="arxiv/2019_12_arxiv.html">2019/12</a> <br>2020: <a href="arxiv/2020_01_arxiv.html">2020/01</a> / <a href="arxiv/2020_02_arxiv.html">2020/02</a> / <a href="arxiv/2020_03_arxiv.html">2020/03</a> / <a href="arxiv/2020_04_arxiv.html">2020/04</a> / <a href="arxiv/2020_05_arxiv.html">2020/05</a> / <a href="arxiv/2020_06_arxiv.html">2020/06</a> / <a href="arxiv/2020_07_arxiv.html">2020/07</a> / <a href="arxiv/2020_08_arxiv.html">2020/08</a> / <a href="arxiv/2020_09_arxiv.html">2020/09</a> / <a href="arxiv/2020_10_arxiv.html">2020/10</a> / <a href="arxiv/2020_11_arxiv.html">2020/11</a> / <a href="arxiv/2020_12_arxiv.html">2020/12</a> <br>2021: <a href="arxiv/2021_01_arxiv.html">2021/01</a> / <a href="arxiv/2021_02_arxiv.html">2021/02</a> / <a href="arxiv/2021_03_arxiv.html">2021/03</a> / <a href="arxiv/2021_04_arxiv.html">2021/04</a> / <a href="arxiv/2021_05_arxiv.html">2021/05</a> / <a href="arxiv/2021_06_arxiv.html">2021/06</a> / <a href="arxiv/2021_07_arxiv.html">2021/07</a> / <a href="arxiv/2021_08_arxiv.html">2021/08</a> / <a href="arxiv/2021_09_arxiv.html">2021/09</a> / <a href="arxiv/2021_10_arxiv.html">2021/10</a> / <a href="arxiv/2021_11_arxiv.html">2021/11</a> / <a href="arxiv/2021_12_arxiv.html">2021/12</a> <br>2022: <a href="arxiv/2022_01_arxiv.html">2022/01</a> / <a href="arxiv/2022_02_arxiv.html">2022/02</a> / <a href="arxiv/2022_03_arxiv.html">2022/03</a> / <a href="arxiv/2022_04_arxiv.html">2022/04</a> / <a href="arxiv/2022_05_arxiv.html">2022/05</a> / <a href="arxiv/2022_06_arxiv.html">2022/06</a> / <a href="arxiv/2022_07_arxiv.html">2022/07</a> / <a href="arxiv/2022_08_arxiv.html">2022/08</a> / <a href="arxiv/2022_09_arxiv.html">2022/09</a></div></div>
+		<div class="cvitemize"> Today's arXiv </div> <div align="center"><div align="left" style="padding: 0;margin:0; height: auto; position: relative;display:inline-block;">2015: <span style="float:right"><a href="arxiv/2015_07_arxiv.html">2015/07</a> / <a href="arxiv/2015_08_arxiv.html">2015/08</a> / <a href="arxiv/2015_09_arxiv.html">2015/09</a> / <a href="arxiv/2015_10_arxiv.html">2015/10</a> / <a href="arxiv/2015_11_arxiv.html">2015/11</a> / <a href="arxiv/2015_12_arxiv.html">2015/12</a> &#8239</span><br>2016: <a href="arxiv/2016_01_arxiv.html">2016/01</a> / <a href="arxiv/2016_02_arxiv.html">2016/02</a> / <a href="arxiv/2016_03_arxiv.html">2016/03</a> / <a href="arxiv/2016_04_arxiv.html">2016/04</a> / <a href="arxiv/2016_05_arxiv.html">2016/05</a> / <a href="arxiv/2016_06_arxiv.html">2016/06</a> / <a href="arxiv/2016_07_arxiv.html">2016/07</a> / <a href="arxiv/2016_08_arxiv.html">2016/08</a> / <a href="arxiv/2016_09_arxiv.html">2016/09</a> / <a href="arxiv/2016_10_arxiv.html">2016/10</a> / <a href="arxiv/2016_11_arxiv.html">2016/11</a> / <a href="arxiv/2018_12_arxiv.html">2016/12</a> <br>2017: <a href="arxiv/2017_01_arxiv.html">2017/01</a> / <a href="arxiv/2017_02_arxiv.html">2017/02</a> / <a href="arxiv/2017_03_arxiv.html">2017/03</a> / <a href="arxiv/2017_04_arxiv.html">2017/04</a> / <a href="arxiv/2017_05_arxiv.html">2017/05</a> / <a href="arxiv/2017_06_arxiv.html">2017/06</a> / <a href="arxiv/2017_07_arxiv.html">2017/07</a> / <a href="arxiv/2017_08_arxiv.html">2017/08</a> / <a href="arxiv/2017_09_arxiv.html">2017/09</a> / <a href="arxiv/2017_10_arxiv.html">2017/10</a> / <a href="arxiv/2017_11_arxiv.html">2017/11</a> / <a href="arxiv/2018_12_arxiv.html">2017/12</a> <br>2018: <a href="arxiv/2018_01_arxiv.html">2018/01</a> / <a href="arxiv/2018_02_arxiv.html">2018/02</a> / <a href="arxiv/2018_03_arxiv.html">2018/03</a> / <a href="arxiv/2018_04_arxiv.html">2018/04</a> / <a href="arxiv/2018_05_arxiv.html">2018/05</a> / <a href="arxiv/2018_06_arxiv.html">2018/06</a> / <a href="arxiv/2018_07_arxiv.html">2018/07</a> / <a href="arxiv/2018_08_arxiv.html">2018/08</a> / <a href="arxiv/2018_09_arxiv.html">2018/09</a> / <a href="arxiv/2018_10_arxiv.html">2018/10</a> / <a href="arxiv/2018_11_arxiv.html">2018/11</a> / <a href="arxiv/2018_12_arxiv.html">2018/12</a> <br>2019: <a href="arxiv/2019_01_arxiv.html">2019/01</a> / <a href="arxiv/2019_02_arxiv.html">2019/02</a> / <a href="arxiv/2019_03_arxiv.html">2019/03</a> / <a href="arxiv/2019_04_arxiv.html">2019/04</a> / <a href="arxiv/2019_05_arxiv.html">2019/05</a> / <a href="arxiv/2019_06_arxiv.html">2019/06</a> / <a href="arxiv/2019_07_arxiv.html">2019/07</a> / <a href="arxiv/2019_08_arxiv.html">2019/08</a> / <a href="arxiv/2019_09_arxiv.html">2019/09</a> / <a href="arxiv/2019_10_arxiv.html">2019/10</a> / <a href="arxiv/2019_11_arxiv.html">2019/11</a> / <a href="arxiv/2019_12_arxiv.html">2019/12</a> <br>2020: <a href="arxiv/2020_01_arxiv.html">2020/01</a> / <a href="arxiv/2020_02_arxiv.html">2020/02</a> / <a href="arxiv/2020_03_arxiv.html">2020/03</a> / <a href="arxiv/2020_04_arxiv.html">2020/04</a> / <a href="arxiv/2020_05_arxiv.html">2020/05</a> / <a href="arxiv/2020_06_arxiv.html">2020/06</a> / <a href="arxiv/2020_07_arxiv.html">2020/07</a> / <a href="arxiv/2020_08_arxiv.html">2020/08</a> / <a href="arxiv/2020_09_arxiv.html">2020/09</a> / <a href="arxiv/2020_10_arxiv.html">2020/10</a> / <a href="arxiv/2020_11_arxiv.html">2020/11</a> / <a href="arxiv/2020_12_arxiv.html">2020/12</a> <br>2021: <a href="arxiv/2021_01_arxiv.html">2021/01</a> / <a href="arxiv/2021_02_arxiv.html">2021/02</a> / <a href="arxiv/2021_03_arxiv.html">2021/03</a> / <a href="arxiv/2021_04_arxiv.html">2021/04</a> / <a href="arxiv/2021_05_arxiv.html">2021/05</a> / <a href="arxiv/2021_06_arxiv.html">2021/06</a> / <a href="arxiv/2021_07_arxiv.html">2021/07</a> / <a href="arxiv/2021_08_arxiv.html">2021/08</a> / <a href="arxiv/2021_09_arxiv.html">2021/09</a> / <a href="arxiv/2021_10_arxiv.html">2021/10</a> / <a href="arxiv/2021_11_arxiv.html">2021/11</a> / <a href="arxiv/2021_12_arxiv.html">2021/12</a> <br>2022: <a href="arxiv/2022_01_arxiv.html">2022/01</a> / <a href="arxiv/2022_02_arxiv.html">2022/02</a> / <a href="arxiv/2022_03_arxiv.html">2022/03</a> / <a href="arxiv/2022_04_arxiv.html">2022/04</a> / <a href="arxiv/2022_05_arxiv.html">2022/05</a> / <a href="arxiv/2022_06_arxiv.html">2022/06</a> / <a href="arxiv/2022_07_arxiv.html">2022/07</a> / <a href="arxiv/2022_08_arxiv.html">2022/08</a> / <a href="arxiv/2022_09_arxiv.html">2022/09</a> / <a href="arxiv/2022_10_arxiv.html">2022/10</a></div></div>
 	<iframe src="last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 	
