--- a/last.html
+++ b/last.html
@@ -28,83 +28,11 @@
 <!-- --> 
 
 
-<style type="text/css">
- @font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzJS3E-kSBmtLoNJPDtbj2Pk.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 700;
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://fonts.gstatic.com/s/opensans/v13/PRmiXeptR36kaC0GEAetxjdGNerWpg2Hn6A-BxWgZ_I.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3SZ2oysoEQEeKwjgmXLRnTc.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/xjAJXh38I15wypJXxuGMBiwlidHJgAgmTjOEEzwu1L8.ttf) format('truetype');
-}
-@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
-
-<!--
-    body {
-        margin: 0;
-        padding: 0;
--webkit-text-size-adjust:none;
-    }
-    //-->
-</style>
-
-<style type="text/css">
-
-a:link {text-decoration: none; color: dimgray;}
-a:visited {text-decoration: none; color: dimgray; }
-a:active {text-decoration: none;  color: dimgray;}
-a:hover {text-decoration: underline; color: darkgray;}
-</style>
-
-<style type="text/css">
-#title {font-weight:bold; font-size:300%; font-family:Open Sans;  text-align: center;}
-#titlecontent { font-family:Open Sans;  text-align: center; font-weight: 500;}
-
-@media screen and (max-width: 1000px){
-#center {font-size:10pt; width:90%; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-@media screen and (min-width: 1000px) {
-#center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
-}
-
-#lastcenter {width:100%; background-color:FFFFFF; text-align:center;
-        margin: 0;
-        padding: 0;}
-
-.cvitemize { font-size:110%; font-weight: bold;}
-.cvitem { font-weight: bold; font-family:Open Sans;}
-.cvperiod { float:right; font-family:Open Sans; font-style:italic;}
-.cvitemcontent { }
- </style>
- 
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-61068885-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="cssstyle.css">
+<script src="scripts.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body style="background-color:#FFFFFF">
